Fixing controls on narrow screens

--- a/javascript/controls/client/scss/index.scss
+++ b/javascript/controls/client/scss/index.scss
@@ -3,22 +3,3 @@ body {
     color: #fff;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-
-.pixel {
-    width: 10px;
-    height: 10px;
-    margin: 2px;
-    border-radius: 50%;
-    display: inline-block;
-}
-
-
-.cheatsheet {
-    background-color: #fff;
-    color: #222;
-    padding: 10px;
-    width: 800px;
-    text-align: left;
-    margin: auto;
-    margin-top: 100px;
-}
